--- a/index.html
+++ b/index.html
@@ -3,14 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=IE8" />
-    <meta
-      name="description"
-      content="Koalas to the Max, a site made with love by Vadim Ogievetsky for Annie Albagli"
-    />
-    <meta
-      name="keywords"
-      content="Koalas Max Vadim Ogievetsky Annie Albagli D3 Canvas SVG Koala Maximization"
-    />
+    <meta name="description" content="记得刮一刮" />
+    <meta name="keywords" content="记得刮一刮" />
     <meta name="viewport" content="width=540, user-scalable=0" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
