--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="google" content="notranslate" />
-    <title>Koalas to the Max dot Com</title>
+    <title>记得刮一刮</title>
     <script type="text/javascript">
       var version = "1.9.6";
     </script>
