--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <!--[if gte IE 9]><!-->
     <script type="text/javascript" src="./d3.min.js?1.9.6"></script>
     <script type="text/javascript" src="./koala.js?1.9.6"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <!--<![endif]-->
     <link rel="stylesheet" type="text/css" href="./koala.css?1.9.6" />
 
@@ -476,7 +477,8 @@
 
           var img = new Image();
           var url;
-          fetch(fileurl, { mode: "no-cors" })
+          axios
+            .get(fileurl)
             .then((response) => {
               if (!response.ok) {
                 throw new Error(
@@ -491,12 +493,8 @@
               img.src = URL.createObjectURL(blob);
             })
             .catch((error) => {
-              console.error(
-                "There has been a problem with your fetch operation:",
-                error
-              );
+              console.error(error);
             });
-
           img.onload = function () {
             var colorData;
             try {
